--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "echarts-for-react": "^3.0.2",
     "electron-store": "^10.0.0",
     "electron-updater": "^6.3.9",
+    "exceljs": "^4.4.0",
     "ffmpeg-static": "^5.3.0",
     "fzstd": "^0.1.1",
     "html2canvas": "^1.4.1",
